--- a/package.json
+++ b/package.json
@@ -26,8 +26,9 @@
     "@nestjs/mapped-types": "0.1.1",
     "@nestjs/platform-express": "^7.5.1",
     "@nestjs/typeorm": "^7.1.5",
+    "@types/bcrypt": "^5.0.0",
     "apollo-server-express": "2.19.1",
-    "bcrypt": "5.0.0",
+    "bcrypt": "^5.0.0",
     "class-transformer": "^0.3.1",
     "class-validator": "^0.12.2",
     "graphql": "15.4.0",
